# eye-for-an-eye

./: .gitignore  LICENCE  README.md  package.yaml
app/: Main.hs
src/: Agent.hs  Interaction.hs  PrettyPrint.hs  React.hs  Reproduce.hs  Scoring.hs  Simulation.hs  World.hs
test/: AgentSpec.hs  InteractionSpec.hs  ReactSpec.hs  ReproduceSpec.hs  ScoringSpec.hs  WorldSpec.hs
visualise/: README.md  pyproject.toml
visualise/eye_for_an_eye_visualiser/: __init__.py
